RESOLVED FIXED160938
[Cocoa] -[NSString isEqualToString:] returns NO for any WKNSString argument
https://bugs.webkit.org/show_bug.cgi?id=160938
Summary [Cocoa] -[NSString isEqualToString:] returns NO for any WKNSString argument
mitz
Reported 2016-08-17 00:46:56 PDT
Patch forthcoming.
Attachments
Make WKObject not inherit from NSObject (6.59 KB, patch)
2016-08-17 01:13 PDT, mitz
no flags
Archive of layout-test-results from ews123 for ios-simulator-elcapitan-wk2 (764.70 KB, application/zip)
2016-08-17 05:01 PDT, Build Bot
no flags
Make WKObject not inherit from NSObject (12.51 KB, patch)
2016-08-17 11:06 PDT, mitz
no flags
Make WKObject not inherit from NSObject (19.31 KB, patch)
2016-08-17 12:08 PDT, mitz
no flags
Make WKObject not inherit from NSObject (19.39 KB, patch)
2016-08-17 12:17 PDT, mitz
andersca: review+
mitz
Comment 1 2016-08-17 00:47:10 PDT
mitz
Comment 2 2016-08-17 01:13:08 PDT
Created attachment 286290 [details] Make WKObject not inherit from NSObject Unfortunately, even NSProxy implements some NSObject methods, so we can’t inherit from NSProxy.
Build Bot
Comment 3 2016-08-17 05:01:12 PDT
Comment on attachment 286290 [details] Make WKObject not inherit from NSObject Attachment 286290 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1886580 New failing tests: ietestcenter/css3/flexbox/flexbox-flex-001.htm
Build Bot
Comment 4 2016-08-17 05:01:15 PDT
Created attachment 286296 [details] Archive of layout-test-results from ews123 for ios-simulator-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-elcapitan-wk2 Platform: Mac OS X 10.11.5
mitz
Comment 5 2016-08-17 11:06:49 PDT
Created attachment 286308 [details] Make WKObject not inherit from NSObject
WebKit Commit Bot
Comment 6 2016-08-17 11:08:05 PDT
Attachment 286308 [details] did not pass style-queue: ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:32: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:33: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:34: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:35: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:36: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:37: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:38: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 7 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 7 2016-08-17 11:22:23 PDT
Comment on attachment 286308 [details] Make WKObject not inherit from NSObject View in context: https://bugs.webkit.org/attachment.cgi?id=286308&action=review I really think we need tests for this - both for isEqualToString: and testing that weak pointers work. > Source/WebKit2/Shared/Cocoa/WKObject.mm:117 > + return selector ? ((id(*)(id, SEL))objc_msgSend)(self, selector) : nil; Can use wtfObjcMsgSend here. > Source/WebKit2/Shared/Cocoa/WKObject.mm:122 > + return selector ? ((id(*)(id, SEL, id))objc_msgSend)(self, selector, object) : nil; Can use wtfObjcMsgSend here. > Source/WebKit2/Shared/Cocoa/WKObject.mm:127 > + return selector ? ((id(*)(id, SEL, id, id))objc_msgSend)(self, selector, object1, object2) : nil; Can use wtfObjcMsgSend here.
mitz
Comment 8 2016-08-17 12:08:26 PDT
Created attachment 286313 [details] Make WKObject not inherit from NSObject
WebKit Commit Bot
Comment 9 2016-08-17 12:11:26 PDT
Attachment 286313 [details] did not pass style-queue: ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:32: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:33: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:34: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:35: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:36: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:37: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:38: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 7 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 10 2016-08-17 12:17:03 PDT
Created attachment 286314 [details] Make WKObject not inherit from NSObject
WebKit Commit Bot
Comment 11 2016-08-17 12:18:24 PDT
Attachment 286314 [details] did not pass style-queue: ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:32: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:33: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:34: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:35: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:36: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:37: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/Platform/spi/Cocoa/objcSPI.h:38: The parameter name "obj" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 7 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 12 2016-08-17 12:19:42 PDT
Comment on attachment 286314 [details] Make WKObject not inherit from NSObject View in context: https://bugs.webkit.org/attachment.cgi?id=286314&action=review > Source/WebKit2/Shared/Cocoa/WKObject.mm:188 > + if (_objc_rootReleaseWasZero(self)) { Maybe make this an early return?
mitz
Comment 13 2016-08-17 12:20:53 PDT
Note You need to log in before you can comment on or make changes to this bug.